--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -11,6 +11,22 @@
   display: inline-block;
 }
 
+.temperature {
+    font-size: 35px;
+    font-weight: bold;
+    padding-left: 20px;
+    color: #333;
+}
+
+.temperaturetype {
+    font-weight: bold;
+    color: #666;
+}
+
+.wicon {
+
+}
+
 .weatherExtraInfoCont {
   background: red;
   width: 40%;
