--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -1,10 +1,9 @@
 .weatherDataCont {
-    background: rgba(200, 200, 200, 0.5);
-  width: 400px;
+  background: rgba(200, 200, 200, 0.5);
+  width: 100%;
   height: 100px;
   line-height: 100px;
   border-radius: 5px;
-  margin: 15px;
 }
 
 .weatherTemperatureCont {
@@ -25,7 +24,7 @@
 }
 
 .wicon {
-    color: #F77206;
+  color: #f77206;
 }
 
 .weatherExtraInfoCont {
@@ -37,7 +36,7 @@
 
 .extraInfoText {
   display: block;
-  color: #1535C5;
+  color: #1535c5;
   font-size: 18px;
   font-weight: bold;
 }
