--- a/src/App.css
+++ b/src/App.css
@@ -37,26 +37,8 @@
   }
 }
 
-.green {
-  background: green;
-  height: 100px;
-  min-width: 50px;
-}
-
-.blue {
-  background: blue;
-  height: 100px;
-  min-width: 50px;
-}
-
-.red {
-  background: red;
-  height: 100px;
-  min-width: 50px;
-}
-
-.yellow {
-  background: yellow;
-  height: 100px;
-  min-width: 50px;
+.detail {
+  background: #9999;
+  height: 100vh;
+  width: 100%;
 }
